chore: update profile picture and last updated timestamp in resume

--- a/resume.hbs
+++ b/resume.hbs
@@ -20,10 +20,10 @@
           {{#resume.basics}}
           <div class="card">
             <div class="profile-card">
-                <!--<div class="profile-pic">
+                <div class="profile-pic">
                   <img class="media-object img-circle center-block"  data-src="holder.js/100x100"
                     alt="{{name}}" src="{{image}}" itemprop="image">
-                </div>-->
+                </div>
                 <div class="contact-details">
                   <div class="name-and-profession">
                     <h3 class="text-bolder name" itemprop="name"> {{name}}</h3>
